<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customer_request_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.example.ian.hopworkorder.CustomerRequestForm"
    android:weightSum="1">

<ProgressBar
    android:id="@+id/request_progress"
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:visibility="gone" />

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/customer_request_form_layout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ian.hopworkorder.CustomerRequestForm"
    tools:showIn="@layout/activity_customer_request_form"
    >



    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_clear"
        tools:layout_editor_absoluteX="288dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please make your request below"
        android:textColor="#ffff"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:hint="@string/email_hint"
        android:background="#FFFF"
        android:id="@+id/edit_text_email"
        android:gravity="top|start"
        android:layout_width="359dp"
        android:layout_height="29dp"
        android:imeOptions="actionDone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:hint="@string/phone_number_hint"
        android:background="#FFFF"
        android:id="@+id/edit_text_input_phone_number"
        android:maxLength="14"
        android:inputType="phone"
        android:gravity="top|start"
        android:layout_width="359dp"
        android:layout_height="29dp"
        android:imeOptions="actionDone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />


    <EditText
        android:hint="@string/please_describe_your_request_here"
        android:background="#FFFF"
        android:id="@+id/edit_text_input_notes"
        android:gravity="top|start"
        android:layout_width="358dp"
        android:layout_height="78dp"
        android:inputType="textImeMultiLine"
        android:imeOptions="actionDone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_input_phone_number" />

    <Spinner
        android:background="#FFFF"
        android:id="@+id/work_type_spinner"
        android:layout_width="358dp"
        android:layout_height="40dp"
        android:tooltipText="@string/workTypesText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_input_notes" />


    <ListView
        android:id="@+id/work_types_list_view"
        android:layout_width="354dp"
        android:layout_height="109dp"
        android:layout_marginEnd="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/work_type_spinner"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        android:text="@string/submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/work_types_list_view" />


</android.support.constraint.ConstraintLayout>
</LinearLayout>