<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ian.hopworkorder.UserSelector"
    tools:showIn="@layout/activity_user_selector"
    android:background="@drawable/background"
    >


    <ImageButton
        android:id="@+id/customerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="54dp"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/customer"
        android:layout_marginBottom="192dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageButton
        android:id="@+id/workerButton"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/worker"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="192dp"
        android:layout_marginLeft="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:text="@string/customer"
        android:textStyle="bold"
        android:textColor="#FFFF"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/customerButton"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/customerButton" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="92dp"
        android:layout_height="33dp"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/worker"
        android:textAlignment="center"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/workerButton"
        android:layout_marginLeft="18dp"
        app:layout_constraintLeft_toLeftOf="@+id/workerButton" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:text="@string/what_describes_you_best"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="77dp"
        app:layout_constraintHorizontal_bias="0.504" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="104dp"
        android:layout_height="68dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/logo_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />
</android.support.constraint.ConstraintLayout>
